--- a/templates/tomcat-defaults.j2
+++ b/templates/tomcat-defaults.j2
@@ -22,3 +22,6 @@ JVM_TMP="{{tomcat8_jvm_tmp}}"
 {% if tomcat8_authbind is defined %}
 AUTHBIND="{{tomcat8_authbind}}"
 {% endif %}
+{% if tomcat8_umask is defined %}
+UMASK="{{tomcat8_umask}}"
+{% endif %}
